# dca_backtesting

./: .gitignore  config.example.yaml  requirements.txt  t10_optimization.py  t1_single_config.py  t2_multiple_pairs.py  t3_multiple_configs.py  t4_multiple_configs_and_pairs.py  t5_cheap_bots.py  t6_download.py  t7_advanced_output_xls.py  t8_looping_parameters.py  t9_bots_by_budget.py
functions/: backtest.py  bot_config.py  config.py  fetch_data.py  generate_fake_data.py
functions/rust_backend/: Cargo.toml
functions/rust_backend/.cargo/: config.toml  linker-zig.sh
functions/rust_backend/src/: backtest.rs  lib.rs
