[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
numpy = "0.22"
chrono = "0.4"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
